Archive2/80/1a3d785bef9203/output
main.cpp: In function 'int main()':
main.cpp:10:6: error: 'yolomode' was not declared in this scope
     *yolomode++; 
      ^
main.cpp:12:12: error: type '<type error>' argument given to 'delete', expected pointer
     delete yolomode;
            ^
